--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@superset-ui/embedded-sdk": "^0.1.3",
     "axios": "^1.7.9",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
