--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,12 +2,12 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_TIMEZONE=Asia/Ho_Chi_Minh
+APP_URL=http://localhost:8000
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_LOCALE=vi
+APP_FALLBACK_LOCALE=vi
+APP_FAKER_LOCALE=vi_VN
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
