--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
+    "@superset-ui/embedded-sdk": "^0.1.3",
     "axios": "^1.7.9",
+    "groq-sdk": "^0.9.1",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "react": "^19.0.0",
